[package]
name = "munnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.1.1"
lunatic = "0.10.2"
serde = { version = "1.0.142", features = ["derive"] }

[patch.crates-io]
lunatic = { git = "https://github.com/lunatic-solutions/lunatic-rs.git", commit = "66ee444" }
