[package]
name = "munnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
lunatic = "0.10.2"
serde = { version = "1.0.142", features = ["derive"] }
lunatic-log = "0.2"

[patch.crates-io]
lunatic = { git = "https://github.com/lunatic-solutions/lunatic-rs.git" }
